logs/cascajal.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cascajal'...
Compiling './lib/python3.5/site-packages/cascajal/cli.py'...
***   File "./lib/python3.5/site-packages/cascajal/cli.py", line 64
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cascajal/data'...
Listing './lib/python3.5/site-packages/cascajal/data/prontoprint'...
Listing './lib/python3.5/site-packages/cascajal/data/prontoprint/doc'...
Listing './lib/python3.5/site-packages/cascajal/data/prontoprint/lib'...
Listing './lib/python3.5/site-packages/cascajal/data/prontoprint/test'...
Listing './lib/python3.5/site-packages/cascajal/tests'...
Listing './lib/python3.5/site-packages/cascajal-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
